<resources>
    <string name="app_name">RideSharing</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="required_for_this_app">Required for this app</string>
    <string name="enable_now">Enable Now</string>
    <string name="location_permission_not_granted">Location Permission not granted</string>
    <string name="current_location">Current Location</string>
    <string name="where_to">Where to?</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="request_cab">Request Cab</string>
    <string name="your_cab_is_arriving">Your Cab is Arriving</string>
    <string name="requesting_your_cab">Requesting your cab</string>
    <string name="your_cab_is_booked">Your Cab is Booked</string>
    <string name="your_cab_has_arrived">Your Cab has Arrived</string>
    <string name="you_are_on_a_trip">You are on a trip</string>
    <string name="trip_end">Trip End</string>
    <string name="take_next_ride">Take Next Ride</string>
    <string name="route_not_available_choose_different_locations">Route Not Available: Choose different pickup and drop location</string>
</resources>