<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.maps.MapsActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pickUpDropLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="12dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pickUpIndicator"
            android:layout_width="9dp"
            android:layout_height="9dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/bg_circle_black"
            app:layout_constraintBottom_toBottomOf="@+id/pickUpTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pickUpTextView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/pickUpTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/light_grey"
            android:ellipsize="end"
            android:hint="@string/pickup_location"
            android:paddingStart="8dp"
            android:paddingTop="6dp"
            android:paddingEnd="8dp"
            android:paddingBottom="6dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/pickUpIndicator"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/dropIndicator"
            app:layout_constraintEnd_toEndOf="@+id/pickUpIndicator"
            app:layout_constraintStart_toStartOf="@+id/pickUpIndicator"
            app:layout_constraintTop_toBottomOf="@+id/pickUpIndicator" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dropIndicator"
            android:layout_width="9dp"
            android:layout_height="9dp"
            android:layout_marginStart="16dp"
            android:background="@android:color/black"
            app:layout_constraintBottom_toBottomOf="@+id/dropTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/dropTextView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dropTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/light_grey"
            android:ellipsize="end"
            android:hint="@string/where_to"
            android:paddingStart="8dp"
            android:paddingTop="6dp"
            android:paddingEnd="8dp"
            android:paddingBottom="6dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dropIndicator"
            app:layout_constraintTop_toBottomOf="@+id/pickUpTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/statusTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:background="@android:color/black"
        android:ellipsize="end"
        android:gravity="center"
        android:padding="12dp"
        android:singleLine="true"
        android:text="@string/requesting_your_cab"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pickUpDropLayout">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/requestCabButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="16dp"
        android:background="@android:color/black"
        android:padding="12dp"
        android:text="@string/request_cab"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextRideButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="16dp"
        android:background="@android:color/black"
        android:padding="12dp"
        android:text="@string/take_next_ride"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.appcompat.widget.AppCompatButton>

</androidx.constraintlayout.widget.ConstraintLayout>